<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/myColor">
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/editText1"></EditText>
    <RadioGroup android:id="@+id/radioGroup1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RadioButton android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/radio0" android:checked="true" android:text="@string/celsius"></RadioButton>
        <RadioButton android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/radio1" android:text="@string/fahrenheit"></RadioButton>
    </RadioGroup>
    <Button android:layout_height="wrap_content" android:text="@string/calc" android:layout_width="wrap_content" android:id="@+id/button1" android:onClick="myClickHandler"></Button>
</LinearLayout>
