<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/myColor"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/convertorsmall" />

        <Button
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="TempConv"
            android:text="@string/Temp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tipssmall" />

        <Button
            android:id="@+id/TipsCalcBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnTipsCalc"
            android:text="@string/TipsCalcBtnTxt" />

    </LinearLayout>

    <Button
        android:id="@+id/Button01"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="OnDrawWord"
        android:text="@string/drawWords"/>

</LinearLayout>